feat: adding CacheControl
Signed-off-by: Ilya Buziuk <ibuziuk@redhat.com>